<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNumberIl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_number_hint"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/symbolIl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_margin"
        app:layout_constraintTop_toBottomOf="@id/firstNumberIl"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/symbolEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/symbol_hint"
            android:inputType="text"
            android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secondNumberIl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_margin"
        app:layout_constraintTop_toBottomOf="@id/symbolIl"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_number_hint"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculateBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bt"
        android:layout_marginTop="@dimen/editText_margin"
        app:layout_constraintTop_toBottomOf="@id/secondNumberIl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_margin"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/calculateBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>