<resources>
    <string name="app_name">TestWithBitraise</string>

    <string name="first_number_hint">Enter the first number</string>
    <string name="symbol_hint">Enter an operation</string>
    <string name="second_number_hint">Enter the second number</string>

    <string name="calculate_bt">Calculate</string>

    <string name="invalid_first_number">Enter a valid first number</string>
    <string name="invalid_symbol">Enter a operation (+,-,x,/)</string>
    <string name="invalid_second_number">Enter a valid second number</string>
</resources>